cambios en estilos

--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "tpye",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "zzzzz",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite .",
-    "build": "vite build ."
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/react": "^18.0.28",
-    "@vitejs/plugin-react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.59.2",
-    "vite": "^4.1.4"
+    "sass": "^1.59.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
